Update Custom_Clash.ini with TUN settings and rules
Added TUN parameters and VPN direct connection rules.

--- a/cfg/Custom_Clash.ini
+++ b/cfg/Custom_Clash.ini
@@ -15,6 +15,35 @@
 ;以下规则，按照从上往下的顺序遍历，优先命中上位规则，规则重复无影响
 ;修改顺序会影响分流效果
 
+;--------------------------------------------------
+; TUN 参数（旁路由链路优化）
+;--------------------------------------------------
+ipv6: false
+udp: true
+tun-mtu: 1452
+tun-device: utun
+tun-stack: system
+tun-gso: true
+tun-auto-route: true
+tun-auto-detect-interface: true
+;--------------------------------------------------
+; ✅ VPN / 虚拟网络专用网段直连
+;--------------------------------------------------
+ruleset=🎯 全球直连,[]IP-CIDR,100.64.0.0/10,no-resolve
+ruleset=🎯 全球直连,[]IP-CIDR,100.101.112.124/32,no-resolve
+ruleset=🎯 全球直连,[]IP-CIDR,100.107.1.117/32,no-resolve
+ruleset=🎯 全球直连,[]IP-CIDR,100.83.198.31/32,no-resolve
+ruleset=🎯 全球直连,[]IP-CIDR,100.80.193.95/32,no-resolve
+ruleset=🎯 全球直连,[]IP-CIDR,192.168.192.0/24,no-resolve
+ruleset=🎯 全球直连,[]IP-CIDR,192.168.192.220/32,no-resolve
+ruleset=🎯 全球直连,[]IP-CIDR,10.10.10.0/24,no-resolve
+ruleset=🎯 全球直连,[]IP-CIDR,10.10.10.2/32,no-resolve
+ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,tailscale.com
+ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,zerotier.com
+ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,zerotier.io
+ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,easytier.top
+ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,easytier.org
+
 ;本地地址和域名直连
 ruleset=🎯 全球直连,[]GEOSITE,private
 ruleset=🎯 全球直连,[]GEOIP,private,no-resolve
