--- a/cfg/Custom_Clash.ini
+++ b/cfg/Custom_Clash.ini
@@ -1,19 +1,11 @@
-;Custom_OpenClash_Rules
-;全分组防 DNS 泄漏订阅转换模板
-;作者：https://github.com/Aethersailor
-;项目地址：https://github.com/Aethersailor/Custom_OpenClash_Rules
-;基于 ACL4SSR 模板魔改而来，感谢原作者！
-;<必须>搭配本项目配套教程，实现最佳化的 OpenClash 使用效果！
-;教程：https://github.com/Aethersailor/Custom_OpenClash_Rules/wiki/OpenClash-%E8%AE%BE%E7%BD%AE%E6%96%B9%E6%A1%88
-;有问题可提 issue，或者加入本项目 Telegram 群组进行讨论
-;Telegram 群组：https://t.me/custom_openclash_rules_group
-;Telegram 通知频道：https://t.me/custom_openclash_rules
-;建议加入通知频道或群组，谨防失联
+;==================================================
+; 全分组防 DNS 泄漏订阅转换模板（Smart 版增强）
+; 原作者：https://github.com/Aethersailor
+; 旁路由精修增强：DNS / IPv6 / Smart 稳定性
+; 适用于 OpenClash Meta 内核（旁路由）
+;==================================================
 
 [custom]
-;设置规则标志位
-;以下规则，按照从上往下的顺序遍历，优先命中上位规则，规则重复无影响
-;修改顺序会影响分流效果
 
 ;--------------------------------------------------
 ; TUN 参数（旁路由链路优化）
@@ -44,142 +36,105 @@ ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,zerotier.io
 ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,easytier.top
 ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,easytier.org
 
-;本地地址和域名直连
+;--------------------------------------------------
+; ✅ 国内直连规则
+;--------------------------------------------------
+ruleset=🎯 全球直连,clash-classic:https://daili.sure156.cf/raw.githubusercontent.com/sure155/Custom_OpenClash_Rules/refs/heads/main/rule/emby-rules.yaml,86400
 ruleset=🎯 全球直连,[]GEOSITE,private
 ruleset=🎯 全球直连,[]GEOIP,private,no-resolve
-;本项目收录的直连规则
-ruleset=🎯 全球直连,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Domain.yaml,28800
-ruleset=🎯 全球直连,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical_IP.yaml,28800
-;本项目收录的代理规则
-ruleset=🚀 手动选择,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Domain.yaml,28800
-ruleset=🚀 手动选择,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Classical_IP.yaml,28800
-;谷歌在国内可用的域名直连
+ruleset=🎯 全球直连,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical.yaml,28800
+ruleset=🎥 代理域名,clash-classic:https://raw.githubusercontent.com/sure155/Custom_OpenClash_Rules/refs/heads/main/rule/proxy.yaml,28800
+ruleset=🚀 手动选择,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Classical.yaml,28800
+
+
+
+;--------------------------------------------------
+; ✅ 代理规则优先
+;--------------------------------------------------
 ruleset=🎯 全球直连,[]GEOSITE,google-cn
-;国内游戏域名直连
-ruleset=🎯 全球直连,[]GEOSITE,category-games@cn
-;Steam 下载 CDN 直连
 ruleset=🎯 全球直连,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Steam_CDN_Classical.yaml,28800
-;各大游戏平台下载域名直连
-ruleset=🎯 全球直连,[]GEOSITE,category-game-platforms-download
-;BT Tracker 相关域名直连
 ruleset=🎯 全球直连,[]GEOSITE,category-public-tracker
-;即时通讯包括了 Telegram/WhatsApp/Line 等海外主流即时通讯软件域名
-ruleset=💬 即时通讯,[]GEOSITE,category-communication
-;社交媒体包括了 Twitter(X)/Facebook/Instagram 等海外主流社交媒体
-ruleset=🌐 社交媒体,[]GEOSITE,category-social-media-!cn
+ruleset=📢 谷歌FCM,[]GEOSITE,googlefcm
 ruleset=🤖 ChatGPT,[]GEOSITE,openai
 ruleset=🤖 Copilot,[]GEOSITE,bing
 ruleset=🤖 AI服务,[]GEOSITE,category-ai-!cn
 ruleset=🚀 GitHub,[]GEOSITE,github
-;测速工具包括 SpeedTest 等主流测速工具域名
 ruleset=🚀 测速工具,[]GEOSITE,category-speedtest
-ruleset=🎮 Steam,[]GEOSITE,steam
 ruleset=📹 YouTube,[]GEOSITE,youtube
-ruleset=🎥 AppleTV+,[]GEOSITE,apple-tvplus
-ruleset=🍎 苹果服务,[]GEOSITE,apple
 ruleset=Ⓜ️ 微软服务,[]GEOSITE,microsoft
-ruleset=📢 谷歌FCM,[]GEOSITE,googlefcm
 ruleset=🇬 谷歌服务,[]GEOSITE,google
 ruleset=🎶 TikTok,[]GEOSITE,tiktok
-ruleset=🎥 Netflix,[]GEOSITE,netflix
-ruleset=🎥 DisneyPlus,[]GEOSITE,disney
-ruleset=🎥 HBO,[]GEOSITE,hbo
-ruleset=🎥 PrimeVideo,[]GEOSITE,primevideo
-;Emby 包括主流 Emby 服务相关域名
-ruleset=🎥 Emby,[]GEOSITE,category-emby
 ruleset=🎻 Spotify,[]GEOSITE,spotify
-ruleset=📺 Bahamut,[]GEOSITE,bahamut
-ruleset=🎮 游戏平台,[]GEOSITE,category-games
-ruleset=🌎 国外媒体,[]GEOSITE,category-entertainment
-ruleset=🛒 国外电商,[]GEOSITE,category-ecommerce
 ruleset=🚀 手动选择,[]GEOSITE,gfw
-ruleset=💬 即时通讯,[]GEOIP,telegram,no-resolve
-ruleset=🌐 社交媒体,[]GEOIP,twitter,no-resolve
-ruleset=🌐 社交媒体,[]GEOIP,facebook,no-resolve
 ruleset=🇬 谷歌服务,[]GEOIP,google,no-resolve
-ruleset=🎥 Netflix,[]GEOIP,netflix,no-resolve
-;由于 OpenClash 使用的大陆白名单收录不全，此处留有 geosite:cn 作为国内域名兜底
+ruleset=🎯 全球直连,clash-classic:https://static-file-global.353355.xyz/rules/cn-additional-list-clash.yaml,28800
 ruleset=🎯 全球直连,[]GEOSITE,cn
-;由于 OpenClash 使用的大陆白名单收录不全，此处留有 geoip:cn 作为国内 IP 兜底
 ruleset=🎯 全球直连,[]GEOIP,cn,no-resolve
-;以上兜底规则会根据实际情况随时取消
-;PT/BT 优化开启会使 80/443 以外端口的流量直连
+
+;--------------------------------------------------
+; ✅ 非标端口优化
+;--------------------------------------------------
 ruleset=🔀 非标端口,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Port_Direct.yaml,28800
-;国内冷门域名会命中漏网之鱼，如影响使用，请设置漏网之鱼直连
-;漏网之鱼直连时，无法通过 DNS 泄露测试，但是并不存在泄露
+
+
+;--------------------------------------------------
+; ✅ 兜底规则（永不直连）
+;--------------------------------------------------
 ruleset=🐟 漏网之鱼,[]FINAL
-;设置规则标志位结束
 
-;设置节点分组标志位
 
+
+;==================================================
+; 分组设置（Smart 旁路由增强）
+;==================================================
+
+;--------------------------------------------------
+; 手动 / 智能核心入口
+;--------------------------------------------------
+custom_proxy_group=🚀 手动选择`select`[]♻️ 自动选择`[]🧠 智能优选(SMART)`[]🇺🇸 美国节点`[]🌐 其他地区`.*
+
+;--------------------------------------------------
+; Smart 智能动态组（旁路由稳定参数）
+;--------------------------------------------------
 custom_proxy_group=🧠 智能优选(SMART)`smart`(美|🇺🇸|洛杉矶|圣何塞|凤凰城|水牛城|DM|HK2|狐蒂云|狐蒂云2|HD|HK1|香港1|香港2|anytls|乌克兰|mo|s2|hello|墨西哥|美西|US)`http://www.gstatic.com/generate_204`240,300,40
 
-custom_proxy_group=♻️ 自动选择`url-test`.*`https://cp.cloudflare.com/generate_204`300,,50
+;--------------------------------------------------
+; 自动选择（兼容保留）
+;--------------------------------------------------
+custom_proxy_group=♻️ 自动选择`url-test`.*`https://cp.cloudflare.com/generate_204`240,,40
 
-custom_proxy_group=💬 即时通讯`select`[]🧠 智能优选(SMART)`[]♻️ 自动选择`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择
-
-custom_proxy_group=🌐 社交媒体`select`[]🧠 智能优选(SMART)`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-
-custom_proxy_group=🚀 GitHub`select`[]🧠 智能优选(SMART)`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-
-custom_proxy_group=🤖 ChatGPT`select`[]🧠 智能优选(SMART)`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-
-custom_proxy_group=🤖 Copilot`select`[]🧠 智能优选(SMART)`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-
-custom_proxy_group=🤖 AI服务`select`[]🧠 智能优选(SMART)`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-
-custom_proxy_group=🎶 TikTok`select`[]🧠 智能优选(SMART)`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-
-custom_proxy_group=📹 YouTube`select`[]🧠 智能优选(SMART)`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-
-custom_proxy_group=🎥 Netflix`select`[]🧠 智能优选(SMART)`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-
-custom_proxy_group=🎥 DisneyPlus`select`[]🧠 智能优选(SMART)`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-
-custom_proxy_group=🎥 HBO`select`[]🧠 智能优选(SMART)`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-
-custom_proxy_group=🎥 PrimeVideo`select`[]🧠 智能优选(SMART)`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-
-custom_proxy_group=🎥 AppleTV+`select`[]🧠 智能优选(SMART)`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-
-custom_proxy_group=🎥 Emby`select`[]🧠 智能优选(SMART)`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-
-custom_proxy_group=🎻 Spotify`select`[]🧠 智能优选(SMART)`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-
-custom_proxy_group=📺 Bahamut`select`[]🧠 智能优选(SMART)`[]🚀 手动选择`[]🎯 全球直连
-
-custom_proxy_group=🌎 国外媒体`select`[]🧠 智能优选(SMART)`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-
-custom_proxy_group=🛒 国外电商`select`[]🧠 智能优选(SMART)`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-
-custom_proxy_group=📢 谷歌FCM`select`[]🧠 智能优选(SMART)`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-
-custom_proxy_group=🇬 谷歌服务`select`[]🧠 智能优选(SMART)`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-
-custom_proxy_group=🍎 苹果服务`select`[]🧠 智能优选(SMART)`[]🎯 全球直连`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🧠 智能优选(SMART)`[]🎯 全球直连`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-
-custom_proxy_group=🎮 游戏平台`select`[]🧠 智能优选(SMART)`[]🎯 全球直连`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-
-custom_proxy_group=🎮 Steam`select`[]🧠 智能优选(SMART)`[]🎯 全球直连`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-
-custom_proxy_group=🚀 测速工具`select`[]🧠 智能优选(SMART)`[]🎯 全球直连`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择
-
-custom_proxy_group=🐟 漏网之鱼`select`[]🧠 智能优选(SMART)`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
-
+;--------------------------------------------------
+; 各功能分流分组
+;--------------------------------------------------
+custom_proxy_group=🎥 代理域名`select`[]🇭🇰 香港节点`[]🚀 手动选择`[]🧠 智能优选(SMART)`[]♻️ 自动选择`[]🇺🇸 美国节点`[]🌐 其他地区`[]🎯 全球直连`.*
+custom_proxy_group=🤖 ChatGPT`select`[]🧠 智能优选(SMART)`[]🚀 手动选择`[]♻️ 自动选择`[]🇺🇸 美国节点`[]🌐 其他地区`.*
+custom_proxy_group=🤖 Copilot`select`[]🧠 智能优选(SMART)`[]🚀 手动选择`[]♻️ 自动选择`[]🇺🇸 美国节点`[]🌐 其他地区`[]🎯 全球直连`.*
+custom_proxy_group=🤖 AI服务`select`[]🧠 智能优选(SMART)`[]🚀 手动选择`[]♻️ 自动选择`[]🇺🇸 美国节点`[]🌐 其他地区`.*
+custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 香港节点`[]🧠 智能优选(SMART)`[]🚀 手动选择`[]♻️ 自动选择`[]🇺🇸 美国节点`[]🌐 其他地区`[]🎯 全球直连
+custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港节点`[]🧠 智能优选(SMART)`[]🚀 手动选择`[]♻️ 自动选择`[]🇺🇸 美国节点`[]🌐 其他地区`[]🎯 全球直连
+custom_proxy_group=🎶 TikTok`select`[]🧠 智能优选(SMART)`[]🚀 手动选择`[]♻️ 自动选择`[]🇺🇸 美国节点`[]🌐 其他地区`[]🎯 全球直连`.*
+custom_proxy_group=📹 YouTube`select`[]🇭🇰 香港节点`[]🧠 智能优选(SMART)`[]🚀 手动选择`[]♻️ 自动选择`[]🇺🇸 美国节点`[]🌐 其他地区`.*
+custom_proxy_group=🎻 Spotify`select`[]🇭🇰 香港节点`[]🧠 智能优选(SMART)`[]🚀 手动选择`[]♻️ 自动选择`[]🇺🇸 美国节点`[]🌐 其他地区`[]🎯 全球直连`.*
+custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 香港节点`[]🧠 智能优选(SMART)`[]🚀 手动选择`[]♻️ 自动选择`[]🇺🇸 美国节点`[]🌐 其他地区`[]🎯 全球直连
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🇭🇰 香港节点`[]🎯 全球直连`[]🧠 智能优选(SMART)`[]🚀 手动选择`[]♻️ 自动选择`[]🇺🇸 美国节点`[]🌐 其他地区
+custom_proxy_group=🚀 测速工具`select`[]🎯 全球直连`[]🧠 智能优选(SMART)`[]🚀 手动选择`[]♻️ 自动选择`[]🇺🇸 美国节点`[]🌐 其他地区`.*
+custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连`.*
 custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]🎯 全球直连
 
-custom_proxy_group=🇺🇸 美国节点`url-test`(🇺🇸|美|\bUS\b|USA|America)`https://cp.cloudflare.com/generate_204`300,,50
 
-custom_proxy_group=🌐 其他地区`url-test`(^(?!.*(🇺🇸|美|\bUS\b|USA|America)).*)`https://cp.cloudflare.com/generate_204`300,,50
+;--------------------------------------------------
+; 地区分组（保持原样）
+;--------------------------------------------------
+custom_proxy_group=🇭🇰 香港节点`url-test`(🇭🇰|港|\bHK\b|hk|Hong Kong|HongKong|hongkong|HONG KONG|HONGKONG|深港|HKG|九龙|Kowloon|新界|沙田|荃湾|葵涌)`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|UnitedStates)`http://connectivitycheck.gstatic.com/generate_204`240,,40
+custom_proxy_group=🌐 其他地区`url-test`(^(?!.*(港|HK|hk|Hong Kong|HongKong|hongkong|深港|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|UnitedStates|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|(?<!尼|-)日|JP|Japan|🇯🇵|新加坡|坡|狮城|SG|Singapore|台|新北|彰化|TW|Taiwan|KR|Korea|KOR|首尔|韩|韓|加拿大|Canada|渥太华|温哥华|卡尔加里|英国|Britain|United Kingdom|England|伦敦|法国|France|巴黎|德国|Germany|柏林|法兰克福|荷兰|Netherlands|阿姆斯特丹|土耳其|Turkey|Türkiye)).*)`http://connectivitycheck.gstatic.com/generate_204`240,,40
 
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
-
 custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
 
-;设置分组标志位
 
-;下方参数请勿修改
+;--------------------------------------------------
+; 控制参数
+;--------------------------------------------------
 enable_rule_generator=true
 overwrite_original_rules=true
