--- a/cfg/Custom_Clash.ini
+++ b/cfg/Custom_Clash.ini
@@ -1,52 +1,83 @@
 ;==================================================
-; 全分组防 DNS 泄漏订阅转换模板（Smart 版增强）
-; 原作者：https://github.com/Aethersailor
-; 旁路由精修增强：DNS / IPv6 / Smart 稳定性
-; 适用于 OpenClash Meta 内核（旁路由）
+; 全分组防 DNS 泄漏订阅转换模板（Smart 版增强 - 修复泄露版）
+; 修复：添加 Meta 内核专用 DNS 策略组 & 嗅探
+; 适用：OpenClash Meta 内核（旁路由/主路由皆可）
 ;==================================================
 
 [custom]
+;--------------------------------------------------
+; 🟢 Meta 内核核心功能：DNS 防泄露配置
+;--------------------------------------------------
+dns:
+  enable: true
+  ipv6: false
+  listen: 0.0.0.0:1053
+  enhanced-mode: fake-ip
+  fake-ip-range: 198.18.0.1/16
+  fake-ip-filter:
+    - '*'
+    - '+.lan'
+    - '+.local'
+    - '+.msftconnecttest.com'
+    - '+.msftncsi.com'
+  # 默认 DNS（用于解析国外域名，走代理）
+  nameserver:
+    - https://dns.google/dns-query
+    - https://1.1.1.1/dns-query
+  # 兜底 DNS（防止 bootstrap 失败）
+  fallback:
+    - https://223.5.5.5/dns-query
+    - https://1.12.12.12/dns-query
+  # 🚫 核心防泄露逻辑：国内域名强制走国内 DNS，不做代理
+  nameserver-policy:
+    "geosite:cn,private,apple,steam@cn":
+      - https://223.5.5.5/dns-query
+      - https://1.12.12.12/dns-query
+
+;--------------------------------------------------
+; 🟢 Meta 内核嗅探 (Sniffer) - 提高分流准确度
+;--------------------------------------------------
+sniffer:
+  enable: true
+  parse-pure-ip: true
+  sniff:
+    tls:
+      ports: [443, 8443]
+    http:
+      ports: [80, 8080-8880]
+      override-destination: true
 
 ;--------------------------------------------------
 ; TUN 参数（旁路由链路优化）
 ;--------------------------------------------------
 ipv6: false
 udp: true
-tun-mtu: 1452
+tun-mtu: 9000
 tun-device: utun
 tun-stack: system
 tun-gso: true
 tun-auto-route: true
 tun-auto-detect-interface: true
+
 ;--------------------------------------------------
 ; ✅ VPN / 虚拟网络专用网段直连
 ;--------------------------------------------------
 ruleset=🎯 全球直连,[]IP-CIDR,100.64.0.0/10,no-resolve
-ruleset=🎯 全球直连,[]IP-CIDR,100.101.112.124/32,no-resolve
-ruleset=🎯 全球直连,[]IP-CIDR,100.107.1.117/32,no-resolve
-ruleset=🎯 全球直连,[]IP-CIDR,100.83.198.31/32,no-resolve
-ruleset=🎯 全球直连,[]IP-CIDR,100.80.193.95/32,no-resolve
-ruleset=🎯 全球直连,[]IP-CIDR,192.168.192.0/24,no-resolve
-ruleset=🎯 全球直连,[]IP-CIDR,192.168.192.220/32,no-resolve
-ruleset=🎯 全球直连,[]IP-CIDR,10.10.10.0/24,no-resolve
-ruleset=🎯 全球直连,[]IP-CIDR,10.10.10.2/32,no-resolve
+ruleset=🎯 全球直连,[]IP-CIDR,192.168.0.0/16,no-resolve
+ruleset=🎯 全球直连,[]IP-CIDR,10.0.0.0/8,no-resolve
 ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,tailscale.com
 ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,zerotier.com
-ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,zerotier.io
 ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,easytier.top
-ruleset=🎯 全球直连,[]DOMAIN-SUFFIX,easytier.org
 
 ;--------------------------------------------------
 ; ✅ 国内直连规则
 ;--------------------------------------------------
-ruleset=🎯 全球直连,clash-classic:https://daili.sure156.cf/raw.githubusercontent.com/sure155/Custom_OpenClash_Rules/refs/heads/main/rule/emby-rules.yaml,86400
+ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/sure155/Custom_OpenClash_Rules/refs/heads/main/rule/emby-rules.yaml,86400
 ruleset=🎯 全球直连,[]GEOSITE,private
 ruleset=🎯 全球直连,[]GEOIP,private,no-resolve
 ruleset=🎯 全球直连,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical.yaml,28800
 ruleset=🎥 代理域名,clash-classic:https://raw.githubusercontent.com/sure155/Custom_OpenClash_Rules/refs/heads/main/rule/proxy.yaml,28800
 ruleset=🚀 手动选择,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Classical.yaml,28800
-
-
 
 ;--------------------------------------------------
 ; ✅ 代理规则优先
@@ -76,36 +107,19 @@ ruleset=🎯 全球直连,[]GEOIP,cn,no-resolve
 ;--------------------------------------------------
 ruleset=🔀 非标端口,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Port_Direct.yaml,28800
 
-
 ;--------------------------------------------------
 ; ✅ 兜底规则（永不直连）
 ;--------------------------------------------------
 ruleset=🐟 漏网之鱼,[]FINAL
 
 
-
 ;==================================================
-; 分组设置（Smart 旁路由增强）
+; 分组设置
 ;==================================================
-
-;--------------------------------------------------
-; 手动 / 智能核心入口
-;--------------------------------------------------
 custom_proxy_group=🚀 手动选择`select`[]♻️ 自动选择`[]🧠 智能优选(SMART)`[]🇺🇸 美国节点`[]🌐 其他地区`.*
-
-;--------------------------------------------------
-; Smart 智能动态组（旁路由稳定参数）
-;--------------------------------------------------
 custom_proxy_group=🧠 智能优选(SMART)`smart`(美|🇺🇸|洛杉矶|圣何塞|凤凰城|水牛城|DM|HK2|狐蒂云|狐蒂云2|HD|HK1|香港1|香港2|anytls|乌克兰|mo|s2|hello|墨西哥|美西|US)`http://www.gstatic.com/generate_204`240,300,40
-
-;--------------------------------------------------
-; 自动选择（兼容保留）
-;--------------------------------------------------
 custom_proxy_group=♻️ 自动选择`url-test`.*`https://cp.cloudflare.com/generate_204`240,,40
 
-;--------------------------------------------------
-; 各功能分流分组
-;--------------------------------------------------
 custom_proxy_group=🎥 代理域名`select`[]🇭🇰 香港节点`[]🚀 手动选择`[]🧠 智能优选(SMART)`[]♻️ 自动选择`[]🇺🇸 美国节点`[]🌐 其他地区`[]🎯 全球直连`.*
 custom_proxy_group=🤖 ChatGPT`select`[]🧠 智能优选(SMART)`[]🚀 手动选择`[]♻️ 自动选择`[]🇺🇸 美国节点`[]🌐 其他地区`.*
 custom_proxy_group=🤖 Copilot`select`[]🧠 智能优选(SMART)`[]🚀 手动选择`[]♻️ 自动选择`[]🇺🇸 美国节点`[]🌐 其他地区`[]🎯 全球直连`.*
@@ -121,10 +135,6 @@ custom_proxy_group=🚀 测速工具`select`[]🎯 全球直连`[]🧠 智能优
 custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连`.*
 custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]🎯 全球直连
 
-
-;--------------------------------------------------
-; 地区分组（保持原样）
-;--------------------------------------------------
 custom_proxy_group=🇭🇰 香港节点`url-test`(🇭🇰|港|\bHK\b|hk|Hong Kong|HongKong|hongkong|HONG KONG|HONGKONG|深港|HKG|九龙|Kowloon|新界|沙田|荃湾|葵涌)`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇸 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|UnitedStates)`http://connectivitycheck.gstatic.com/generate_204`240,,40
 custom_proxy_group=🌐 其他地区`url-test`(^(?!.*(港|HK|hk|Hong Kong|HongKong|hongkong|深港|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|UnitedStates|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|(?<!尼|-)日|JP|Japan|🇯🇵|新加坡|坡|狮城|SG|Singapore|台|新北|彰化|TW|Taiwan|KR|Korea|KOR|首尔|韩|韓|加拿大|Canada|渥太华|温哥华|卡尔加里|英国|Britain|United Kingdom|England|伦敦|法国|France|巴黎|德国|Germany|柏林|法兰克福|荷兰|Netherlands|阿姆斯特丹|土耳其|Turkey|Türkiye)).*)`http://connectivitycheck.gstatic.com/generate_204`240,,40
@@ -132,9 +142,5 @@ custom_proxy_group=🌐 其他地区`url-test`(^(?!.*(港|HK|hk|Hong Kong|HongKo
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
 
-
-;--------------------------------------------------
-; 控制参数
-;--------------------------------------------------
 enable_rule_generator=true
 overwrite_original_rules=true
